# license-cxx

./: .gitignore  CMakeLists.txt
src/: auth_util.cc  auth_util.h  license_gen.cc  machineid.cc  machineid.h  macros.h  rsa_util.cc  rsa_util.h
